--- a/contact/index.html
+++ b/contact/index.html
@@ -9,84 +9,95 @@
     <title>Tarbox Construction, Inc.| Contact Us</title>
 		<meta name="description" content="Tarbox Construction is all about customer service and relationships. If you have questions or think that you might like to work with us, we would be happy to talk to you.">
 
-    <!-- Bootstrap -->
     <link href='https://fonts.googleapis.com/css?family=Vollkorn' rel='stylesheet' type='text/css'>
-		<link href="../css/bootstrap.min.css" rel="stylesheet">
-    <link href="../css/main.css" rel="stylesheet">
+    <!-- Bootstrap core CSS -->
+    <link href="../css/bootstrap.min.css" rel="stylesheet">
+
+    <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
+    <link href="../css/ie10-viewport-bug-workaround.css" rel="stylesheet">
+
+    <!-- Just for debugging purposes. Don't actually copy these 2 lines! -->
+    <!--[if lt IE 9]><script src="../../assets/js/ie8-responsive-file-warning.js"></script><![endif]-->
+    <script src="../assets/js/ie-emulation-modes-warning.js"></script>
 
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
-    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
       <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
+
+    <!-- Custom styles for this template -->
+    <link href="../css/main.css" rel="stylesheet">
   </head>
+<!-- NAVBAR
+================================================== -->
   <body>
-		<div class="navbar-wrapper">
-			<div class="container">
-				<nav class="navbar navbar-inverse navbar-static-top">
-					<div class="container">
-						<div class="navbar-header">
-							<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
-								<span class="sr-only">Toggle navigation</span>
-								<span class="icon-bar"></span>
-								<span class="icon-bar"></span>
-								<span class="icon-bar"></span>
-							</button>
-							<a class="navbar-brand" href="../index.html">
-								<img alt="Brand" src="../img/tci-md.jpg" a href="index.html">
-							</a>
-						</div>
-						<div id="navbar" class="navbar-collapse collapse">
-							<ul class="nav navbar-nav">
-								<li><a href="../services/index.html">Services</a></li>
-								<li class="dropdown">
-									<a href="about" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">About<span class="caret"></span></a>
-									<ul class="dropdown-menu">
-										<li><a href="../about/history.html">History</a></li>
-										<li><a href="../about/team.html">Team</a></li>
-									</ul>
-								<li class="dropdown">
-									<a href="portfolio" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Portfolio<span class="caret"></span></a>
-									<ul class="dropdown-menu">
-										<li><a href="../portfolio/commercial.html">Commercial</a></li>
-										<li><a href="../portfolio/residential.html">Residential</a></li>
-									</ul>
-									<li><a href="../contact/index.html">Contact</a></li>
-								</li>
-							</ul>
-						</div>
-					</div>
-				</nav>
-			</div>
-		</div>
-		<div id="main-content">
-
-			<!--Contact Information--->
-			<div id="contact">
-					<div class="full-width" id="contact-info">
-		 <h2>Contact Us</h2>
-		 <p>Tarbox Construction is all about customer service and relationships. If you have questions or think that you might like to work with us, we would be happy to talk to you.</p>
-			<h3 id= "email-header">Drop us a line:</h3>
-			<a href="mailto:jtarbox1@maine.rr.com">jtarbox1@maine.rr.com</a>
-			<h3 id="phone-header">Give us a call:</h3>
-			<p>(207) 468 - 2499</p>
-		 <h3 id= "socialmedia-header">Or,</h3>
-	<!--Social Media Links-->
-					<p><a href="https://www.facebook.com/Tarbox-Construction-Inc-1270395452975167/" target="_blank"><img src="../img/fb.png" alt="facebook icon"/></a></p>
-				 </div><!--contact-info--->
+    <div class="navbar-wrapper">
+      <div class="container">
+        <nav class="navbar navbar-inverse navbar-static-top">
+          <div class="container">
+            <div class="navbar-header">
+              <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+                <span class="sr-only">Toggle navigation</span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+              </button>
+              <a class="navbar-brand" href="../index.html">
+                <img alt="Brand" src="../img/tci-md.jpg" a href="../index.html">
+              </a>
+            </div>
+            <div id="navbar" class="navbar-collapse collapse">
+              <ul class="nav navbar-nav">
+                <li><a href="../services/index.html">Services</a></li>
+                <li class="dropdown">
+                  <a href="about" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">About<span class="caret"></span></a>
+                  <ul class="dropdown-menu">
+                    <li><a href="../about/history.html">History</a></li>
+                    <li><a href="../about/team.html">Team</a></li>
+                  </ul>
+                <li class="dropdown">
+                  <a href="portfolio" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Portfolio<span class="caret"></span></a>
+                  <ul class="dropdown-menu">
+                    <li><a href="../portfolio/commercial.html">Commercial</a></li>
+                    <li><a href="../portfolio/residential.html">Residential</a></li>
+                  </ul>
+                  <li><a href="../contact/index.html">Contact</a></li>
+                </li>
+              </ul>
+            </div>
+          </div>
+        </nav>
+      </div>
+    </div>
 
 
-				 <!-- FOOTER -->
-				 <footer>
-					 <p>&copy; 2016 Tarbox Construction, Inc.</p>
-				 </footer>
+    <!-- Main Content -->
+  <div class= "main-content">
+    <h1>Contact Us</h1>
+    <p class="main-item">Tarbox Construction is all about customer service and relationships. If you have questions or think that you might like to work with us, we would be happy to talk to you.</p>
+    <p class="main-item">Phone: (207) 468 - 2499</p>
+    <p class="main-item">Email: <a href="mailto:jtarbox1@maine.rr.com">jtarbox1@maine.rr.com</a></p>
+    <p class="main-item"><a href="https://www.facebook.com/Tarbox-Construction-Inc-1270395452975167/" target="_blank"><img src="../img/fb.png" alt="facebook icon"/></a></p>
+ </div> <!-- main-content-->
 
-			 </div><!-- /.container -->
+      <!-- FOOTER -->
+      <footer>
+        <p>&copy; 2016 Tarbox Construction, Inc.</p>
+      </footer>
 
-    <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
+    </div><!-- container -->
+
+
+    <!-- Bootstrap core JavaScript
+    ================================================== -->
+    <!-- Placed at the end of the document so the pages load faster -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-    <!-- Include all compiled plugins (below), or include individual files as needed -->
-    <script src="js/bootstrap.min.js"></script>
+    <script>window.jQuery || document.write('<script src="../../assets/js/vendor/jquery.min.js"><\/script>')</script>
+    <script src="../js/bootstrap.min.js"></script>
+    <!-- Just to make our placeholder images work. Don't actually copy the next line! -->
+    <script src="../js/vendor/holder.min.js"></script>
+    <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
+    <script src="../js/ie10-viewport-bug-workaround.js"></script>
   </body>
 </html>
